[package]
name = "wpactrl"
description = "wpa_supplicant control interface library"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/sauyon/wpa-ctrl-rs"
version = "0.4.0"
authors = [ "Sauyon Lee <s@uyon.co>", "Steven Pease <peasteven@gmail.com>" ]

[dependencies]
log = { version = "0.4.14", default-features = false }
libc = { version = "0.2.101", default-features = false }

[dev-dependencies]
serial_test = { version = "0.6.0", default-features = false }
